Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
reactos-bootcd-0.4.15-dev-6725-ge685b25-x86-gcc-lin-dbg
- Open bitmap
- Skew : 89° / 89°

Result in image behind skewed but failing :
(win32ss/gdi/eng/surface.c:164) Overflow calculating size: cjWidth 15548, cy 296964 |
(win32ss/gdi/ntgdi/bitmaps.c:137) SURFACE_AllocSurface failed. |
(win32ss/gdi/ntgdi/dibobj.c:2037) GreCreateBitmapEx failed |
Win2K3 :

Attachments
Issue Links
- blocks
-
CORE-19094 mspaint: Refactor and improve Part 2
-
- Resolved
-